# DiagHam_Stability

./: .gitignore  README.rst
branches/regnault/src/Hamiltonian/: AbstractHamiltonian.cc  AbstractHamiltonian.h  AbstractQHEOnSphereHamiltonian.h  AnisotropicSpinChainHamiltonian.h  Makefile.am  Makefile.in  ParticleOnSphereDeltaHamiltonian.cc  ParticleOnSphereDeltaModifiedHamiltonian.h  ParticleOnTorusCoulombDMRGReadyHamiltonian.cc  ParticleOnTorusCoulombWithSpinHamiltonian.h  PeriodicDMRGHamiltonian.h  PeriodicSpinChainHamiltonian.cc  PeriodicXXZSpinChainWithSecondNearestNeighborCouplingHamiltonian.cc  QuantumDots3DHamiltonian.cc  QuantumDots3DHamiltonian.h  TriangleSpinChainHamiltonian.cc
branches/regnault/src/HilbertSpace/: AbstractSpinChainWithTranslations.cc  BosonOnTorus.cc  DMRGPartialHilbertSpace.h  Fermions.cc  FullFermionOnTorus.h  Makefile.am  ParticleOnTorusWithSpin.h  SpaceDecomposition.cc  Spin1AKLTChain.cc  Spin1FullAKLTChain.h  Spin1_2Chain.h  Spin1_2ChainWithTranslations.h  SubspaceSpaceConverter.cc  ThierryChain.h
branches/regnault/src/LanczosAlgorithm/: AbstractLanczosAlgorithm.h  BasicLanczosAlgorithmWithEigenstates.h  ComplexBasicLanczosAlgorithmWithEigenstates.h  ComplexBasicLanczosAlgorithmWithGroundState.cc  FullReorthogonalizedLanczosAlgorithm.h  FullReorthogonalizedLanczosAlgorithmWithDiskStorage.h  ImplicitRestartedArnoldiWithReorthogonalizationAlgorithm.h  Makefile.am
branches/testing_nr/src/LanczosAlgorithm/: AbstractLanczosAlgorithm.cc  BasicBlockLanczosAlgorithm.cc  BasicBlockLanczosAlgorithm.h  BasicLanczosAlgorithm.h  BasicLanczosAlgorithmWithGroundStateDiskStorage.cc  ComplexBasicLanczosAlgorithmWithDiskStorage.cc  ComplexBasicLanczosAlgorithmWithGroundStateFastDisk.cc  FullReorthogonalizedComplexLanczosAlgorithmWithDiskStorage.cc  FullReorthogonalizedLanczosAlgorithm.h  FullReorthogonalizedLanczosAlgorithmWithDiskStorage.cc  Makefile.am
branches/testing_nr/src/MathTools/: ClebschGordanCoefficients.cc  ClebschGordanDiskCoefficients.h  GroupedPermutations.cc  IntegerAlgebraTools.h  Makefile.am
branches/testing_zp/src/Matrix/: BlockDiagonalMatrix.cc  BlockMatrix.cc  Complex3DArray.h  Complex4DArray.cc  ComplexDiagonalMatrix.cc  ComplexDiagonalMatrix.h  ComplexSkewSymmetricMatrix.cc  ComplexUpperTriangularMatrix.cc  ComplexUpperTriangularMatrix.h  HermitianMatrix.h  Makefile.am  RealMatrix.cc  RealMatrix.h  RealTriDiagonalSymmetricMatrix.cc  RealUpperTriangularMatrix.h
branches/testing_zp/src/Options/: Makefile.am  MultipleDoubleInternalOption.cc  MultipleDoubleInternalOption.h  OptionGroup.cc  OptionManager.cc  Options.h  SingleDoubleInternalOption.cc  SingleDoubleInternalOption.h  SingleIntegerOption.cc  SingleIntegerOption.h  SingleStringOption.cc
trunk/FQHE/src/Hamiltonian/: AbstractQHEHamiltonian.cc  AbstractQHEOnCylinderHamiltonian.cc  AbstractQHEOnCylinderThreeBodyHamiltonian.cc  AbstractQHEOnCylinderThreeBodyHamiltonian.h  AbstractQHEOnSphereFullHamiltonian.cc  AbstractQHEOnSphereFullHamiltonian.h  AbstractQHEOnSphereNBodyInteractionHamiltonian.cc  AbstractQHEOnSphereNBodyInteractionHamiltonian.h  AbstractQHEOnSphereQuantumWellHamiltonian.h  AbstractQHEOnSphereWithSU4SpinCasimirHamiltonian.cc  AbstractQHEOnSphereWithSU4SpinHamiltonian.cc  AbstractQHEOnSphereWithSU4SpinHamiltonian.h  AbstractQHEOnSphereWithSpinHamiltonian.cc  AbstractQHEOnSphereWithSpinHamiltonian.h  AbstractQHEOnSphereWithSpinNBodyInteractionHamiltonianWithPairing.h  AbstractQHEOnTorusHamiltonian.cc  AbstractQHEOnTorusNBodyInteractionHamiltonian.cc  AbstractQHEOnTorusWithMagneticTranslationsHamiltonian.h  AbstractQHEOnTorusWithMagneticTranslationsNBodyHamiltonian.cc  (+161 more)
trunk/src/GeneralTools/: ArrayTools.h  BitMarkers.cc  ComplexUniqueArray.h  ConfigurationParser.cc  ConfigurationParser.h  FilenameTools.h  GarbageFlag.cc  GarbageFlag.h  GenericSignalHandler.h  ListElement.h  Makefile.am  MultiColumnASCIIFile.h  OrderedList.h  SortedComplexUniqueArray.cc  SortedComplexUniqueArray.h  StringTools.cc  StringTools.h  SystemTools.cc  SystemTools.h  UnsignedIntegerTools.cc  Warnings.h
trunk/src/Hamiltonian/: ExplicitHamiltonian.cc  ExplicitHamiltonian.h  FileBasedHamiltonian.cc  FileBasedHamiltonian.h  FileBasedHermitianHamiltonian.cc  Makefile.am  MultipleTensorProductSparseMatrixHamiltonian.cc  TensorProductSparseMatrixSelectedBlockHamiltonian.h  TripleTensorProductSparseMatrixHamiltonian.h
trunk/src/LanczosAlgorithm/: AbstractLanczosAlgorithm.cc  BasicArnoldiAlgorithmWithDiskStorage.h  BasicBlockArnoldiAlgorithm.cc  BasicBlockArnoldiAlgorithm.h  BasicComplexArnoldiAlgorithm.cc  BasicComplexArnoldiAlgorithm.h  BasicLanczosAlgorithm.h  BasicLanczosAlgorithmWithDiskStorage.h  BasicLanczosAlgorithmWithGroundState.cc  ComplexArnoldiCPMapsAlgorithm.h  ComplexBasicLanczosAlgorithm.cc  ComplexBasicLanczosAlgorithmWithDiskStorage.cc  ComplexBasicLanczosAlgorithmWithDiskStorage.h  ComplexBasicLanczosAlgorithmWithGroundState.cc  ComplexBasicLanczosAlgorithmWithGroundState.h  ComplexBasicLanczosAlgorithmWithGroundStateAndProjectorFastDisk.cc  ComplexBasicLanczosAlgorithmWithGroundStateFastDisk.cc  ComplexBasicLanczosAlgorithmWithGroundStateFastDisk.h  ComplexBasicLanczosAlgorithmWithProjector.cc  FullReorthogonalizedComplexBlockLanczosAlgorithm.cc  FullReorthogonalizedComplexBlockLanczosAlgorithmWithDiskStorage.h  FullReorthogonalizedComplexLanczosAlgorithm.cc  FullReorthogonalizedLanczosAlgorithm.cc  ImplicitRestartedArnoldiWithReorthogonalizationAlgorithm.cc  InternalReorthogonalizedLanczosAlgorithm.h  LanczosManager.h  Makefile.am  PowerMethodAlgorithm.cc  ProjectedLanczosAlgorithmWithGroundState.cc  ProjectedLanczosAlgorithmWithGroundState.h  ProjectedReorthogonalizedLanczosAlgorithmDiskStorage.cc
trunk/src/MPSObjects/: AbstractMPOperatorOBC.cc  ComplexMPOperatorOBC.cc  ComplexMPOperatorOBC.h  ComplexMPSSite.cc  ComplexMPSSite.h  DMRGFiniteSizeComplexOBCMainTask.cc  DMRGFiniteSizeComplexOBCMainTask.h  DMRGFiniteSizeRealOBCMainTask.cc  DMRGInfiniteSizeComplexMainTask.cc  LeftOrthonormalizeAlgorithm.cc  LeftOrthonormalizeAlgorithm.h  Makefile.am  RealMPSSite.cc  RealMPSSite.h
(+3596 files in other folders)
