SUBDIRS=

noinst_LIBRARIES=libGeneralTools.a

libGeneralTools_a_SOURCES=GarbageFlag.cc \
ConfigurationParser.cc \
MultiColumnASCIIFile.cc \
FilenameTools.cc \
UnsignedIntegerTools.cc \
RealUniqueArray.cc \
ComplexUniqueArray.cc \
SortedRealUniqueArray.cc \
SortedComplexUniqueArray.cc \
SmallIntegerArray.cc \
StringTools.cc \
BitMarkers.cc \
GenericSignalHandler.cc \
SystemTools.cc 
