SUBDIRS=DMRGHamiltonian

noinst_LIBRARIES=libHamiltonian.a

libHamiltonian_a_SOURCES=AbstractHamiltonian.cc \
ExplicitHamiltonian.cc \
FileBasedHamiltonian.cc \
FileBasedHermitianHamiltonian.cc \
TensorProductSparseMatrixHamiltonian.cc \
TensorProductSparseMatrixSelectedBlockHamiltonian.cc \
MultipleTensorProductSparseMatrixHamiltonian.cc \
TripleTensorProductSparseMatrixHamiltonian.cc
