SUBDIRS=

noinst_LIBRARIES=libMPSObjects.a

libMPSObjects_a_SOURCES=AbstractMPOperatorOBC.cc \
RealMPOperatorOBC.cc \
ComplexMPOperatorOBC.cc \
AbstractMPSSite.cc \
RealMPSSite.cc \
ComplexMPSSite.cc \
DMRGFiniteSizeRealOBCMainTask.cc \
DMRGFiniteSizeComplexOBCMainTask.cc \
DMRGInfiniteSizeComplexMainTask.cc \
CompletelyPositiveMap.cc \
LeftOrthonormalizeAlgorithm.cc
