SUBDIRS=

noinst_LIBRARIES=libHilbertSpace.a

libHilbertSpace_a_SOURCES=AbstractHilbertSpace.cc \
AbstractSpinChain.cc \
AbstractSpinChainWithTranslations.cc \
DMRGPartialHilbertSpace.cc \
Fermions.cc \
SpaceDecomposition.cc \
Spin1_2Chain.cc \
Spin1_2ChainWithTranslations.cc \
Spin1AKLTChain.cc \
Spin1Chain.cc \
Spin1FullAKLTChain.cc \
SubspaceSpaceConverter.cc \
ThierryChain.cc \
TrappedBosons.cc \
ParticleOnSphere.cc \
FermionOnSphere.cc \
BosonOnSphere.cc \
ParticleOnTorus.cc \
FermionOnTorus.cc \
FullFermionOnTorus.cc \
BosonOnTorus.cc \
ParticleOnTorusWithSpin.cc \
FermionOnTorusWithSpin.cc \
AharonovBohmCages.cc \
UndescribedHilbertSpace.cc \
Confined3DOneParticle.cc
