SUBDIRS=NumericalAnalysis RandomNumber

noinst_LIBRARIES=libMathTools.a

libMathTools_a_SOURCES=FactorialCoefficient.cc \
ClebschGordanCoefficients.cc \
IntegerAlgebraTools.cc \
BinomialCoefficients.cc \
GroupedPermutations.cc \
ClebschGordanDiskCoefficients.cc \
ArithmeticGeometricMean.cc \
JacobiThetaFunction.cc
