SUBDIRS=

noinst_LIBRARIES=libMatrix.a libArray.a

libMatrix_a_SOURCES=BlockDiagonalMatrix.cc \
BlockMatrix.cc \
ComplexMatrix.cc \
ComplexTriDiagonalHermitianMatrix.cc \
ComplexSkewSymmetricMatrix.cc \
HermitianMatrix.cc \
Matrix.cc \
RealAntisymmetricMatrix.cc \
RealDiagonalMatrix.cc \
RealMatrix.cc \
RealSymmetricMatrix.cc \
RealTriDiagonalSymmetricMatrix.cc \
RealUpperTriangularMatrix.cc \
RealLowerTriangularMatrix.cc \
ComplexUpperTriangularMatrix.cc \
ComplexDiagonalMatrix.cc \
RealBandDiagonalSymmetricMatrix.cc \
ComplexLapackDeterminant.cc


libArray_a_SOURCES = \
Double3DArray.cc \
Complex3DArray.cc \
Complex4DArray.cc
