SUBDIRS=

noinst_LIBRARIES=libOptions.a

libOptions_a_SOURCES=AbstractOption.cc \
BooleanOption.cc \
SingleDoubleOption.cc \
SingleDoubleInternalOption.cc \
MultipleDoubleOption.cc \
MultipleDoubleInternalOption.cc \
MultipleDoubleInternalOption.h \
SingleIntegerOption.cc \
MultipleIntegerOption.cc \
MultipleIntegerOption.h \
SingleIntegerInternalOption.cc \
SingleStringOption.cc \
SingleStringInternalOption.cc \
MultipleStringOption.cc \
MultipleStringOption.h \
OptionGroup.cc \
OptionManager.cc
