SUBDIRS=

noinst_LIBRARIES=libQHEHamiltonian.a

libQHEHamiltonian_a_SOURCES=ParticleOnDiskDeltaHamiltonian.cc \
ParticleOnTorusCoulombHamiltonian.cc \
ParticleOnTorusDeltaHamiltonian.cc \
ParticleOnTorusCoulombWithSpinHamiltonian.cc \
ParticleOnSphereCoulombHamiltonian.cc \
ParticleOnSphereDeltaHamiltonian.cc \
ParticleOnSphereDeltaModifiedHamiltonian.cc \
AbstractQHEHamiltonian.cc \
AbstractQHEOnSphereHamiltonian.cc \
AbstractQHEOnTorusHamiltonian.cc \
ParticleOnSphereCoulombDeltaHamiltonian.cc \
ParticleOnSphereLaplacianDeltaHamiltonian.cc \
ParticleOnSphereCoulombLaplacianDeltaHamiltonian.cc \
AbstractQHEOnTorusWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnTorusWithSpinAndMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDeltaWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnDiskHamiltonian.cc \
ParticleOnDiskLaplacianDeltaHamiltonian.cc \
ParticleOnSphereDipolarHamiltonian.cc \
ParticleOnSphereGenericHamiltonian.cc \
AbstractQHEOnSphereNBodyInteractionHamiltonian.cc \
ParticleOnSphereNBodyHardCoreHamiltonian.cc \
ParticleOnDiskNBodyHardCoreHamiltonian.cc \
ParticleOnTorusCoulombWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDipolarWithMagneticTranslationsHamiltonian.cc \
ParticleOnSphereWithSpinDeltaLaplacianDeltaHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithImpuritiesHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithTwoImpuritiesHamiltonian.cc \
AbstractQHEOnSphereWithSU4SpinHamiltonian.cc \
ParticleOnSphereWithSU4SpinGenericHamiltonian.cc \
ParticleOnSphereWithSU4SpinL2Hamiltonian.cc \
ParticleOnSphereWithSU4SpinS2Hamiltonian.cc \
ParticleOnSphereL2Hamiltonian.cc \
LinearlySuperposedQHEOnSphereHamiltonian.cc \
AbstractQHEOnSphereWithSpinHamiltonian.cc \
ParticleOnSphereWithSpinGenericHamiltonian.cc \
ParticleOnSphereWithSpinL2Hamiltonian.cc \
ParticleOnSphereWithSpinS2Hamiltonian.cc \
ParticleOnTorusCoulombWithSpinAndMagneticTranslationsHamiltonian.cc \
AbstractQHEOnSphereWithSU3SpinHamiltonian.cc \
ParticleOnSphereWithSU3SpinGenericHamiltonian.cc \
ParticleOnSphereWithSU3SpinL2Hamiltonian.cc \
AbstractQHEOnLatticeHamiltonian.cc \
ParticleOnLatticeDeltaHamiltonian.cc \
ParticleOnLatticeGenericHamiltonian.cc \
ParticleOnLatticeWithKyDeltaHamiltonian.cc \
ParticleOnDiskGenericHamiltonian.cc \
ParticleOnDiskLPlusLMinusHamiltonian.cc \
ParticleOnSphereGenericThreeBodyHamiltonian.cc \
ParticleOnSphereWithSpinBasicThreeBodyHamiltonian.cc \
ParticleOnSphereWithSpinBasicThreeBodyHamiltonianWithPairing.cc \
ParticleOnSphereWithSpinGenericThreeBodyHamiltonianWithPairing.cc \
ParticleOnDiskGenericThreeBodyHamiltonian.cc \
AbstractQHEOnSphereWithSpinNBodyInteractionHamiltonian.cc \
AbstractQHEOnSphereWithSpinNBodyInteractionHamiltonianWithPairing.cc \
ParticleOnSphereWithSpinGenericThreeBodyHamiltonian.cc \
ParticleOnSphereQuantumWellHamiltonian.cc \
AbstractQHEOnSphereQuantumWellHamiltonian.cc \
ParticleOnSphereBilayerHamiltonian.cc \
AbstractQHEOnSphereWithSpinFullHamiltonian.cc \
ParticleOnSphereTwoLandauLevelHamiltonian.cc \
ProjectedQHEHamiltonian.cc \
ParticleOnSphereGenericFourBodyHamiltonian.cc \
ParticleOnSphereGenericFiveBodyHamiltonian.cc \
ParticleOnSphereProjectorHamiltonian.cc \
ParticleOnLatticeExternalHamiltonian.cc \
ParticleOnSphereTwoLandauLevelL2Hamiltonian.cc \
ParticleOnSphereEffectiveLatticeHamiltonian.cc \
AbstractQHEOnTorusNBodyInteractionHamiltonian.cc \
ParticleOnTorusThreeBodyHardcoreHamiltonian.cc \
AbstractQHEOnTorusWithSpinHamiltonian.cc \
ParticleOnTorusLaplacianDeltaHamiltonian.cc \
ParticleOnTorusWithSpinLaplacianDeltaHamiltonian.cc \
ParticleOnTorusHaffnianHamiltonian.cc \
ParticleOnSphereTwoLandauLevelDeltaHamiltonian.cc \
ParticleOnSphereMultipleGroupNBodyHardCoreHamiltonian.cc \
ParticleOnLatticeWithKyNBodyDeltaHamiltonian.cc \
AbstractQHEOnCylinderHamiltonian.cc \
ParticleOnCylinderLaplacianDeltaHamiltonian.cc  \
ParticleOnTorusTwoLandauLevelsHamiltonian.cc \
ParticleOnTorusWithSpinGenericHamiltonian.cc \
ParticleOnTorusGenericHamiltonian.cc \
AbstractQHEOnSphereWithSU4SpinCasimirHamiltonian.cc \
AbstractQHEOnTwistedTorusWithMagneticTranslationsHamiltonian.cc \
ParticleOnTwistedTorusCoulombWithMagneticTranslationsHamiltonian.cc \
ParticleOnTwistedTorusGenericHamiltonian.cc \
ParticleOnCylinderCoulombHamiltonian.cc \
ParticleOnCylinderStructureFactor.cc \
AbstractQHEOnCylinderThreeBodyHamiltonian.cc \
ParticleOnCylinderThreeBodyLaplacianDeltaHamiltonian.cc \
AbstractQHEOnTorusWithSU3SpinHamiltonian.cc \
ParticleOnTorusWithSU3SpinGenericHamiltonian.cc \
AbstractQHEOnTorusWithSU4SpinHamiltonian.cc \
ParticleOnTorusWithSU4SpinGenericHamiltonian.cc \
ParticleOnCylinderGaffnianHamiltonian.cc \
ParticleOnCylinderFourBodyDeltaHamiltonian.cc \
AbstractQHEOnCylinderFourBodyHamiltonian.cc \
ParticleOnTorusThreeLandauLevelsHamiltonian.cc \
ParticleOnCylinderHaffnianHamiltonian.cc \
ParticleOnCylinderOrbitalProjection.cc \
ParticleOnCylinderNBodyHamiltonian.cc \
ParticleOnCylinderPermanentState.cc \
ParticleOnCylinderHaldaneRezayi.cc \
ParticleOnLatticeTimeReversalBreakingSingleBandHamiltonian.cc \
ParticleOnLatticeTimeReversalBreakingSingleBandNBodyHamiltonian.cc \
ParticleOnLatticeWithSpinChernInsulatorHamiltonian.cc \
ParticleOnLatticeWithSpinChernInsulatorNBodyHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFullThreeBandHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallThreeBandHamiltonian.cc \
AbstractQHEOnSphereFullHamiltonian.cc \
ParticleOn4DSphereDeltaHamiltonian.cc \
ParticleOnDiskWithSpinGenericHamiltonian.cc \
ParticleOn4DSphereThreeBodyDeltaHamiltonian.cc \
ParticleOnCylinderFluctuatingMetricHamiltonian.cc \
ParticleOnCP2DeltaHamiltonian.cc \
ParticleOnCylinderDensityDensity.cc \
ParticleOnCP2ThreeBodyDeltaHamiltonian.cc \
ParticleOnCP2GenericTwoBodyHamiltonian.cc \
ParticleOnCylinderPseudopotentialHamiltonian.cc \
ParticleOnSphereWithSpinFullGenericHamiltonian.cc \
ParticleOnTorusWithSpinAndMagneticTranslationsGenericHamiltonian.cc \
AbstractQHEOnTorusWithMagneticTranslationsNBodyHamiltonian.cc \
ParticleOnTorusThreeBodyHardcoreWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusMassAnisotropyGenericHamiltonian.cc \
ParticleOnTorusCoulombMassAnisotropyWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusNematicParameterWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusNBodyHardCoreWithMagneticTranslationsHamiltonian.cc \
ParticleOnLatticeWithSU3SpinChernInsulatorHamiltonian.cc \
AbstractQHEOnTorusWithSU3SpinAndMagneticTranslationsHamiltonian.cc \
ParticleOnTorusWithSU3SpinAndMagneticTranslationsGenericHamiltonian.cc \
ParticleOnCylinderInterlayerPfaffian.cc \
ParticleOnCylinderPermanentTimes221State.cc \
ParticleOnCylinderOneQuarterPfaffian.cc \
ParticleOnTorusGenericNBodyWithMagneticTranslationsHamiltonian.cc \
ParticleOnTwistedTorusGenericNBodyWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusWithSpinTimeReversalSymmetricGenericHamiltonian.cc \
ParticleOnCylinderPairAmplitude.cc \
ParticleOnTorusWithSpinAndMagneticTranslationsTimeReversalSymmetricGenericHamiltonian.cc \
ParticleOnTorusNBodyHollowCoreWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnTorusWithSpinAndMagneticTranslationsNBodyHamiltonian.cc \
ParticleOnTorusWithSpinAndMagneticTranslationsNBodyHardCoreHamiltonian.cc \
ParticleOnTorusWithSpinAndMagneticTranslationsGenericHamiltonianWithPairing.cc \
AbstractQHEOnTorusWithSpinAndMagneticTranslationsHamiltonianWithPairing.cc \
AbstractQHEOnTorusWithSpinAndMagneticTranslationsNBodyHamiltonianWithPairing.cc \
ParticleOnTorusWithSpinAndMagneticTranslationsNBodyHardCoreHamiltonianWithPairing.cc \
ParticleOnLatticeKapitMuellerHamiltonian.cc \
ParticleOnLatticeKapitMuellerMultiLayerHamiltonian.cc \
ParticleOnLatticeProjectedKapitMuellerMultiLayerHamiltonian.cc \
ParticleOnSphereWithSpinTimeReversalSymmetricGenericHamiltonianAndPairing.cc \
ParticleOnSphereWithSpinTimeReversalSymmetricQuasiholeHamiltonianAndPairing.cc \
ParticleOnSphereGenericAnisotropicHamiltonian.cc \
ParticleOnTwistedTorusWithSpinAndMagneticTranslationsGenericHamiltonian.cc \
ParticleOnCylinderWithSpinGenericHamiltonian.cc \
ParticleOnSphereWithSpinTimeReversalSymmetricQuasiholeHamiltonianAndPairingAllMomenta.cc \
ParticleOnTorusGenericHamiltonianAllMomenta.cc \
ParticleOnCylinderWithSpinTimeReversalSymmetricGenericHamiltonianAndPairing.cc \
ParticleOnCylinderWithSpinTimeReversalSymmetricGenericHamiltonianAndPairingAllMomenta.cc \
ParticleOnS2xS2DeltaHamiltonian.cc \
ParticleOnCylinderxCylinderDeltaHamiltonian.cc \
ParticleOnCylinderxCylinderDeltaTruncatedHamiltonian.cc \
ParticleOnS2xS2GenericTwoBodyHamiltonian.cc \
ParticleOnCylinderxCylinderGenericTwoBodyHamiltonian.cc \
ParticleOnT2xT2GenericTwoBodyHamiltonian.cc \
ParticleOnT2xS2WithMagneticTranslationsGenericTwoBodyHamiltonian.cc \
ParticleOnT2xCylinderWithMagneticTranslationsGenericTwoBodyHamiltonian.cc \
ParticleOnT2xS2GenericTwoBodyHamiltonian.cc \
ParticleOnTorusCoulombWithSpinAndMagneticTranslationsTimeReversalSymmetricHamiltonian.cc \
ParticleOnTorusDoubleGatedCoulombWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnTorusWithMagneticTranslationsRealHamiltonian.cc \
ParticleOnTorusCoulombWithMagneticTranslationsRealHamiltonian.cc \
ParticleOnTorusPerturbedCoulombHamiltonian.cc \
ParticleOnLatticeWithSpinChernInsulatorRealHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandRealHamiltonian.cc \
ParticleOnThinAnnulusGenericHamiltonian.cc
