SUBDIRS=

noinst_LIBRARIES=libFTIHilbertSpace.a

libFTIHilbertSpace_a_SOURCES=FermionOnLatticeWithSpinRealSpace.cc \
FermionOnLatticeWithSpinAndGutzwillerProjectionRealSpace.cc \
FermionOnLatticeWithSpinRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinAndGutzwillerProjectionRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryAndGutzwillerProjectionRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpace.cc \
FermionOnLatticeWithSpinSzSymmetryAndGutzwillerProjectionRealSpace.cc \
FermionOnLatticeWithSpinRealSpaceAnd2DTranslation.cc \
FermionOnLatticeWithSpinAndGutzwillerProjectionRealSpaceAnd2DTranslation.cc \
FermionOnLatticeRealSpace.cc \
FermionOnLatticeRealSpaceAnd2DTranslation.cc \
BosonOnLatticeRealSpace.cc \
BosonOnLatticeGutzwillerProjectionRealSpace.cc \
BosonOnLatticeGutzwillerProjectionRealSpaceAnd2DTranslation.cc \
BosonOnLatticeRealSpaceAnd2DTranslation.cc \
BosonOnLatticeRealSpaceOneOrbitalPerSiteAnd2DTranslation.cc \
BosonOnLatticeGutzwillerProjectionRealSpaceOneOrbitalPerSiteAnd2DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpaceAnd2DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryAndGutzwillerProjectionRealSpaceAnd2DTranslation.cc \
FermionOnLatticeRealSpaceAnd1DTranslation.cc \
BosonOnLatticeGutzwillerProjectionRealSpaceAnd1DTranslation.cc \
FermionOnLatticeRealSpaceFixedParity.cc \
FermionOnLatticeWithSpinRealSpaceAnd2DTranslationLong.cc \
BosonOnLatticeGutzwillerProjectionRealSpaceAnd2DTranslationLong.cc \
BosonOnLatticeGutzwillerProjectionRealSpaceOneOrbitalPerSiteAnd2DTranslationLong.cc \
FermionOnLatticeWithSpinRealSpaceAnd2DTranslationMinNbrSinglets.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpaceAnd2DTranslationMinNbrSinglets.cc \
FermionOnLatticeWithSpinRealSpaceLong.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpaceAnd2DTranslationLong.cc\
FermionOnLatticeWithSpinSzSymmetryRealSpaceAnd2DTranslationMinNbrSingletsLong.cc\
FermionOnLatticeWithSpinRealSpaceAnd2DTranslationMinNbrSingletsLong.cc \
FermionOnLatticeRealSpaceFixedZNParity.cc \
FermionOnSquareLatticeRealSpaceNNExclusion.cc \
FermionOnLatticeRealSpaceAnd2DTranslationWithExclusion.cc \
FermionOnLatticeRealSpaceWithExclusion.cc \
FermionOnSquareLatticeRealSpaceAndC4Symmetry.cc \
FermionOnSquareLatticeRealSpaceAndC4SymmetryWithExclusion.cc \
FermionOnHoneycombLatticeWithSpinRealSpacePlaquetteExclusion.cc \
FermionOnHoneycombLatticeWithSpinRealSpacePlaquetteExclusionAnd2DTranslation.cc \
FermionOnHoneycombLatticeWithSpinSzSymmetryRealSpacePlaquetteExclusionAnd2DTranslation.cc