SUBDIRS=

noinst_LIBRARIES=libSpinHamiltonian.a

libSpinHamiltonian_a_SOURCES=AnisotropicSpinChainHamiltonian.cc \
AKLTHamiltonian.cc \
DiamondSpinChainHamiltonian.cc \
DoubleTriangleSpinChainHamiltonian.cc \
Mn12Hamiltonian.cc \
OpenDiamondSpinChainHamiltonian.cc \
PeriodicSpinChainHamiltonian.cc \
PeriodicAnisotropicSpinChainHamiltonian.cc \
PeriodicSandGlassSpinChainHamiltonian.cc \
PeriodicXXZSpinChainHamiltonian.cc \
SpinChainHamiltonian.cc \
SpinChainHamiltonianWithTranslations.cc \
SandGlassSpinChainHamiltonian.cc \
MultipleSpinChainHamiltonian.cc \
TriangleSpinChainHamiltonian.cc \
V15Hamiltonian.cc \
XXZSpinChainHamiltonian.cc \
PeriodicXXZSpinChainWith2ndNeighborCouplingHamiltonian.cc \
SpinChainHamiltonianWithTranslations.cc \
NDMAPSpinChainHamiltonian.cc \
AbstractSUNSpinHamiltonian.cc \
AbstractSUNSpinOnLatticeHamiltonian.cc \
SUNSpinOnLatticeQuadraticHamiltonian.cc \
DoubleTrianglePeriodicSpinChainHamiltonian.cc \
DoubleTrianglePeriodicSpinChainWithTranslationHamiltonian.cc \
HaldaneShastryHamiltonianWithTranslations.cc \
Potts3ChainHamiltonian.cc \
SpinChainAKLTHamiltonian.cc \
SpinChainWithDisorderHamiltonian.cc \
SpinChainLongRangeHamiltonian.cc \
SpinChainZ2InteractingHamiltonian.cc \
SpinChainXYZHamiltonian.cc \
Potts3ChainHamiltonianWithTranslations.cc \
SpinChainZ2InteractingHamiltonianWithTranslations.cc \
SpinChainXYZNaturalBoundaryTermHamiltonian.cc \
Potts3ChainNaturalBoundaryTermHamiltonian.cc \
SpinChainPureHFieldHamiltonian.cc \
SpinChainTripleProductHamiltonian.cc \
SpinChainFullHamiltonian.cc \
SpinChainRealFullHamiltonian.cc \
SpinChainAKLTHamiltonianWithTranslations.cc \
TwoDimensionalTransverseFieldIsingHamiltonian.cc \
TwoDimensionalTransverseFieldAnd2DTranslationIsingHamiltonian.cc \
SpinChainRealHamiltonianWithTranslations.cc \
SpinChainAKLTRealHamiltonianWithTranslations.cc \
TwoDimensionalTriangularLatticeWithPseudospinHamiltonian.cc \
TwoDimensionalKagomeLatticeHamiltonian.cc \
TwoDimensionalKagomeLatticeAnd2DTranslationHamiltonian.cc \
SpinChainJ1J2HamiltonianWithTranslations.cc \
SpinChainJ1J2RealHamiltonianWithTranslations.cc \
TwoDimensionalTriangularRareEarthHamiltonian.cc \
SpinChainAKLTP3P4HamiltonianWithTranslations.cc \
SpinChainAKLTP3P4RealHamiltonianWithTranslations.cc \
TwoDimensionalTriangularLatticeWithPseudospinAnd2DTranslationHamiltonian.cc \
Unconventional3DToricCodeHamiltonian.cc \
ShastrySutherlandHamiltonian.cc \
ShastrySutherlandAnd2DTranslationHamiltonian.cc \
SpinChainAKLTStabilizerHamiltonian.cc \
TwoDimensionalSquareLatticeSU3Hamiltonian.cc \
TwoDimensionalSquareLatticeSU3And2DTranslationHamiltonian.cc \
SpinChain4QbitsStabilizerHamiltonian.cc \
TwoDimensionalHeisenbergHamiltonian.cc \
TwoDimensionalHeisenbergAnd2DTranslationHamiltonian.cc \
TwoDimensionalRRHamiltonian.cc \
TwoDimensionalRRAnd2DTranslationHamiltonian.cc \
PairHoppingHamiltonian.cc \
PairHoppingHamiltonianWithTranslations.cc \
PairHoppingRealHamiltonianWithTranslations.cc \
SpinChainOBrienFendleyHamiltonianWithTranslations.cc \
SpinChainOBrienFendleyRealHamiltonianWithTranslations.cc \
Potts3ChainDualOBrienFendleyHamiltonian.cc \
Potts3ChainDualOBrienFendleyHamiltonianWithTranslations.cc \
Potts3ChainDualOBrienFendleyRealHamiltonianWithTranslations.cc \
SpinChainLongRangeXYZHamiltonian.cc \
SpinChainJz2Hamiltonian.cc \
SpinChainOBrienFendleyHamiltonian.cc
