SUBDIRS=

noinst_LIBRARIES=libSpinHilbertSpace.a

libSpinHilbertSpace_a_SOURCES=AbstractSpinChain.cc \
AbstractSpinChainWithTranslations.cc \
Spin1_2Chain.cc \
Spin1_2ChainWithTranslations.cc \
Spin1AKLTChain.cc \
Spin1Chain.cc \
Spin1FullAKLTChain.cc \
Spin1ChainWithTranslations.cc \
ThierryChain.cc \
AbstractSUNSpinCollection.cc \
GenericSUNSpinCollection.cc \
Potts3Chain.cc \
Spin1_2ChainFull.cc \
Potts3ChainWithTranslations.cc \
Spin1_2ChainFixedParity.cc \
Spin1_2ChainFixedParityWithTranslations.cc \
Potts4Chain.cc \
Spin1_2ChainMirrorSymmetry.cc \
Spin1_2ChainNew.cc \
Spin1_2ChainParitySymmetry.cc \
Spin1_2ChainFullAnd2DTranslation.cc \
Spin1_2ChainFullInversionAnd2DTranslation.cc \
AbstractDoubledSpinChain.cc \
DoubledSpin0_1_2_ChainWithTranslations.cc \
AbstractDoubledSpinChainWithTranslations.cc \
DoubledSpin1_2_Chain.cc \
DoubledSpin1_2_ChainWithTranslations.cc \
DoubledSpin0_1_2_ChainWithTranslationsAndZZSymmetry.cc\
Spin0_1_2_ChainWithTranslations.cc \
Spin0_1_2_ChainWithTranslationsStaggered.cc \
DoubledSpin0_1_2_ChainWithTranslationsStaggered.cc \
DoubledSpin0_1_2_ChainWithTranslationsStaggeredAndZZSymmetry.cc \
DoubledSpin1_2_ChainWithTranslations_alternative.cc \
Spin1ChainWithTranslationsAndSzSymmetry.cc \
Spin1ChainWithTranslationsAndInversionSymmetry.cc \
Spin1ChainWithTranslationsAndSzInversionSymmetries.cc \
PEPSLocalPhysicalAndVirtualSpin.cc \
Spin1_2ChainWithPseudospin.cc \
Spin1_2ChainNewAnd2DTranslation.cc \
Spin1_2ChainNewSzSymmetryAnd2DTranslation.cc \
Spin1_2ChainWithTranslationsAndSzSymmetry.cc \
Spin1_2ChainWithTranslationsAndInversionSymmetry.cc \
Spin1_2ChainWithTranslationsAndSzInversionSymmetries.cc	\
DoubledSpin0_1_2_ChainWithTranslationsAndZZSymmetryAndSublatticeQuantumNumbers.cc \
Spin2Chain.cc \
Spin2ChainWithTranslations.cc \
Spin2ChainWithTranslationsAndSzSymmetry.cc \
Spin2ChainWithTranslationsAndInversionSymmetry.cc \
Spin2ChainWithTranslationsAndSzInversionSymmetries.cc \
VirtualSpaceTransferMatrixWithTranslations.cc \
VirtualSpacePEPSWithTranslations.cc \
Spin1_2ChainWithPseudospinAnd2DTranslation.cc \
Spin1_2ChainWithPseudospinSzSymmetryAnd2DTranslation.cc \
Spin0_1_2_ChainWithTranslationsAndSublatticeQuantumNumbers.cc \
DoubledSpin0_1_2_ChainWithSquareTranslationsAndSublatticeQuantumNumbers.cc \
Spin1ChainWithSzSymmetry.cc \
Spin1ChainWithInversionSymmetry.cc \
Spin1ChainWithSzInversionSymmetries.cc \
Spin1_2ChainNewSzSymmetryGenericInversionAnd2DTranslation.cc \
Spin1_2ChainNewGenericInversionAnd2DTranslation.cc \
SU3SpinChain.cc \
SU3SpinChainAnd2DTranslation.cc \
SU3SpinChain2DTranslationAndTzSymmetry.cc \
Spin3_2Chain.cc \
Spin3_2ChainAnd2DTranslation.cc \
Spin3_2ChainSzSymmetryAnd2DTranslation.cc \
PairHoppingP1AsSpin1Chain.cc \
PairHoppingP2AsSpin1Chain.cc \
PairHoppingGenericPAsSpin1Chain.cc \
PairHoppingP1AsSpin1ChainWithTranslations.cc \
PairHoppingP2AsSpin1ChainWithTranslations.cc \
PairHoppingGenericPAsSpin1ChainWithTranslations.cc \
PairHoppingP1AsSpin1ChainWithTranslationsAndInversionSzSymmetry.cc \
PairHoppingP2AsSpin1ChainWithTranslationsAndInversionSzSymmetry.cc \
PairHoppingGenericPAsSpin1ChainWithTranslationsAndInversionSzSymmetry.cc \
Spin1ChainLong.cc \
Spin1ChainWithTranslationsLong.cc \
PairHoppingP1AsSpin1ChainLong.cc \
PairHoppingP2AsSpin1ChainLong.cc \
PairHoppingGenericPAsSpin1ChainLong.cc\
PairHoppingP1AsSpin1ChainWithTranslationsLong.cc \
PairHoppingP2AsSpin1ChainWithTranslationsLong.cc \
PairHoppingGenericPAsSpin1ChainWithTranslationsLong.cc \
PairHoppingP1AsSpin1ChainWithTranslationsAndInversionSzSymmetryLong.cc \
PairHoppingP2AsSpin1ChainWithTranslationsAndInversionSzSymmetryLong.cc \
PairHoppingGenericPAsSpin1ChainWithTranslationsAndInversionSzSymmetryLong.cc \
Potts3ChainWithTranslationsAndInversion.cc \
Spin1_2ChainLong.cc \
Spin1_2ChainWithTranslationsLong.cc \
Spin1_2ChainWithTranslationsAndSzSymmetryLong.cc \
Spin1_2ChainWithTranslationsAndInversionSymmetryLong.cc \
Spin1_2ChainWithTranslationsAndSzInversionSymmetriesLong.cc
