SUBDIRS=

noinst_LIBRARIES=libSpinMPSObjects.a

libSpinMPSObjects_a_SOURCES=MPOPeratorSixVertexModelTransferMatrixSquare.cc \
RealMPOPeratorDefinedByFiles.cc \
ComplexMPOPeratorDefinedByFiles.cc \
AbstractTransfertMatrixPBC.cc \
TransfertMatrixPBCWithTranslationsFromFile.cc \
AbstractPEPSTransfertMatrixPBC.cc \
ComplexPEPSTransfertMatrixPBC.cc \
ComplexPEPSTransfertMatrixPBCWithTranslations.cc \
ComplexPEPSPBC.cc \
ComplexPEPSABSublatticeTransfertMatrixPBCWithTranslations.cc
