SUBDIRS=

noinst_LIBRARIES=libNumericalAnalysis.a

libNumericalAnalysis_a_SOURCES=AbstractNumericalInterval.cc \
FiniteRegularSubdivisionNumericalInterval.cc \
RNumericalInterval.cc \
Abstract1DRealFunction.cc \
Abstract1DComplexFunction.cc \
Abstract1DComplexTrialFunction.cc \
Abstract1DComplexFunctionOnSphere.cc \
Abstract1DComplexTrialFunctionOnSphere.cc \
AntisymmetrizedComplexFunction.cc \
SymmetrizedComplexFunction.cc \
Tabulated1DRealFunction.cc \
Constant1DRealFunction.cc \
Linear1DRealFunction.cc
