SUBDIRS=

noinst_LIBRARIES=libQuantumDotHilbertSpace.a

libQuantumDotHilbertSpace_a_SOURCES=OneDOneParticle.cc \
PeriodicOneDOneParticle.cc \
PeriodicReflexionSymmetryOneDOneParticle.cc \
TwoDOneParticle.cc \
ThreeDOneParticle.cc \
PeriodicThreeDOneParticle.cc \
PeriodicXReflexionYZPeriodicThreeDOneParticle.cc \
PeriodicXYReflexionZPeriodicThreeDOneParticle.cc \
PlanarRotationSymmetryThreeDOneParticle.cc \
PlanarRotationSymmetryZPeriodicOneParticle.cc \
ThreeDTwoParticles.cc \
PeriodicThreeDTwoParticles.cc
