SUBDIRS=

noinst_LIBRARIES=libSpinHamiltonian.a

libSpinHamiltonian_a_SOURCES=AnisotropicSpinChainHamiltonian.cc \
AKLTHamiltonian.cc \
DiamondSpinChainHamiltonian.cc \
DoubleTriangleSpinChainHamiltonian.cc \
Mn12Hamiltonian.cc \
OpenDiamondSpinChainHamiltonian.cc \
PeriodicSpinChainHamiltonian.cc \
PeriodicAnisotropicSpinChainHamiltonian.cc \
PeriodicSandGlassSpinChainHamiltonian.cc \
PeriodicXXZSpinChainHamiltonian.cc \
SpinChainHamiltonian.cc \
SpinChainHamiltonianWithTranslations.cc \
SandGlassSpinChainHamiltonian.cc \
MultipleSpinChainHamiltonian.cc \
TriangleSpinChainHamiltonian.cc \
V15Hamiltonian.cc \
XXZSpinChainHamiltonian.cc \
PeriodicXXZSpinChainWith2ndNeighborCouplingHamiltonian.cc \
SpinChainHamiltonianWithTranslations.cc \
NDMAPSpinChainHamiltonian.cc 
